# blockcg

./: README.md  examples.ipynb  pyproject.toml
src/blockcg/: __init__.py  blockcg.py  cg.py  util.py
