[build-system]
requires = ["setuptools>=59.2.0", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "blockcg"
version = "0.0.1"
authors = [
  { name="Jonathan Lindbloom", email="jonathan@lindbloom.com" },
]
description = "Pure python implementations of block conjugate gradient methods."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["block conjugate gradient", "breakdown-free conjugate gradient", "BF-BCG", "DP-BCG", "HS-BCG"]

[project.urls]
"Homepage" = "https://github.com/jlindbloom/blockcg"
"Bug Tracker" = "https://github.com/jlindbloom/blockcg/issues"